--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
         "zod": "^3.24.1"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^28.0.2",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^16.0.0",
+        "@rollup/plugin-typescript": "^12.1.2",
         "@types/koa": "^2.15.0",
         "@types/koa__router": "^12.0.4",
         "@types/node": "^20",
@@ -21,6 +25,8 @@
         "eslint-plugin-security": "^3.0.1",
         "nodemon": "^3.1.9",
         "prettier": "^3.4.2",
+        "rollup": "^4.34.6",
+        "tslib": "^2.8.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.23.0"
@@ -30,6 +36,7 @@
         "check-format": "prettier --check --ignore-path ./.gitignore .",
         "lint": "eslint src/",
         "start": "env NODE_ENV=development ts-node --files src/index.ts",
-        "watch": "nodemon"
+        "watch": "nodemon",
+        "build": "rm -rf ./dist && rollup -c"
     }
 }
